# RtspRecoder

./: .gitignore  ALSA-release-x86_64-data.cmake  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  OpenSSL-release-x86_64-data.cmake  OpusConfig.cmake  PROJECT_STRUCTURE.md  README.md  SndFile-release-x86_64-data.cmake  WebP-release-x86_64-data.cmake  autoconf-config.cmake  automake-release-x86_64-data.cmake  conan_toolchain.cmake  conandata.txt  conanfile.txt  dav1d-release-x86_64-data.cmake  ffmpeg-Target-release.cmake  ffmpeg-config.cmake  ffmpeg-release-x86_64-data.cmake  fmt-release-x86_64-data.cmake  libcap-release-x86_64-data.cmake  m4-release-x86_64-data.cmake  media_source.h  module-Iconv-release-x86_64-data.cmake  mpg123-release-x86_64-data.cmake  plugin_manager.h  pulseaudio-config.cmake  pulseaudio-release-x86_64-data.cmake  storage_manager.h  vaapi-config.cmake  vaapi-release-x86_64-data.cmake  vdpau-config.cmake  vdpau-release-x86_64-data.cmake  yaml-cpp-release-x86_64-data.cmake  设计需求.md  软件设计.md
cmake/: BZip2-release-x86_64-data.cmake  LibLZMA-release-x86_64-data.cmake  Ogg-release-x86_64-data.cmake  OpenJPEG-release-x86_64-data.cmake  Opus-release-x86_64-data.cmake  PNG-release-x86_64-data.cmake  PNGConfig.cmake  Vorbis-release-x86_64-data.cmake  WebPConfig.cmake  asio-release-x86_64-data.cmake  autoconf-release-x86_64-data.cmake  automake-config.cmake  brotli-release-x86_64-data.cmake  cmake_install.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  cpuinfo-release-x86_64-data.cmake  dav1d-config.cmake  fdk-aac-config.cmake  libcap-config.cmake  (+28 more)
(+15 files in other folders)
